# fastly-compute-b2-demo

./: .gitignore  Cargo.toml  README.md  fastly.toml
src/: awsv4.rs  config.rs  main.rs
