[package]
name = "fastly-compute-b2-demo"
version = "0.1.0"
authors = ["Pat Patterson <ppatterson@backblaze.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "0.8.2"
regex = "1.4.2"
cfg-if = "1.0.0"
lazy_static = "1.4.0"
# required for awsv4 sig gen
chrono = { version = "0.4.19", optional = true }
hmac-sha256 = { version = "0.1.6", optional = true }
hex = { version = "0.4.2", optional = true }
urlencoding = { version = "1.1.1", optional = true }

# You may comment out the following lines to skip AWS V4 signing
# if you wish to use public buckets
[features]
default = ["auth"]
auth = ["chrono", "hmac-sha256", "hex", "urlencoding"]
